--- a/package.json
+++ b/package.json
@@ -3,13 +3,27 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "client": "snowpack dev",
+    "server": "yarn compileserver && node ./build/index.js",
+    "compileserver": "tsc server/index.ts --outDir ./build"
+  },
   "devDependencies": {
     "@snowpack/plugin-react-refresh": "^2.4.0",
     "@snowpack/plugin-typescript": "^1.2.1",
+    "@types/express": "^4.17.11",
+    "@types/node": "^14.14.35",
+    "@types/node-fetch": "^2.5.8",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
     "@types/snowpack-env": "^2.3.3",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
+    "sequelize": "^6.5.1",
     "snowpack": "^3.0.13",
+    "sqlite3": "^5.0.2",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
